<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Palmap</string>
    <string name="action_settings">旧版</string>
    <string name="action_available">可用</string>
    <string name="action_example">例子</string>
    <string name="do_not_find_sdcard">未找到SDCard</string>
    <string name="mall_load_fail">商场数据加载失败！</string>
    <string name="map_load_fail">地图数据加载失败！</string>
    <string name="load_fail">加载失败！</string>
    <string name="map_loading">加载地图数据中&#8230;</string>
    <string name="mall_loading">加载商场数据中&#8230;</string>
    <string name="hint">提示</string>
    <string name="pic">图片</string>
    <string name="red">红色</string>
    <string name="green">绿色</string>
    <string name="blue">蓝色</string>
    <string name="shop">商铺</string>
    <string name="word">文字</string>
    <string name="wc">洗手间</string>
    <string name="upstairs">楼梯</string>
    <string name="elevator">电梯</string>
    <string name="rotate">旋转</string>
    <string name="click">点击</string>
    <string name="skew">俯仰</string>
    <string name="zoom">缩放</string>
    <string name="move">移动</string>
    <string name="all">所有</string>
    <string name="carpet">地毯</string>
    <string name="wood">木质</string>
    <string name="grass">草皮</string>
    <string name="search">搜索</string>
    <string name="android_default_font">Android默认字体</string>
    <string name="fangsong">仿宋</string>
    <string name="two_font_to_select">这里可以选择两种不同的字体！</string>
    <string name="choose_public_service_to_show">请选择要显示的公共设施！</string>
    <string name="now_beyond_map">当前位置在地图之外</string>
    <string name="once">1倍</string>
    <string name="twice">2倍</string>
    <string name="single_click_and_make_poi_center">单击屏幕上一点，可以使所在POI居中哦！</string>
    <string name="now_no_cover_thing">当前没有覆盖物</string>
    <string name="public_service">公共实施</string>
    <string name="choose_layer_to_show">请选择要显示的图层！</string>
    <string name="color_red">颜色-红</string>
    <string name="choose_map_bg">请选择地图背景</string>
    <string name="choose_floor_bg">请为图聚(F15)选择不同的地板颜色！</string>
    <string name="choose_ground_bg">请请为图聚(F15)装饰个地面！</string>
    <string name="choose_map_move_area">请选择地图可以移动区域方位</string>
    <string name="loading">加载中</string>
    <string name="map_show">地图显示</string>
    <string name="multi_building">多建筑物</string>
    <string name="sh_stock_building">上海证券大厦</string>
    <string name="zd_square">正大广场</string>
    <string name="no_navigation_data">无导航数据</string>
    <string name="start_navigate">开始导航</string>
    <string name="stop_navigate">取消导航</string>
    <string name="set_start">设置起点</string>
    <string name="set_end">设置终点</string>
    <string name="start">起点</string>
    <string name="end">终点</string>
    <string name="config_one">配置1</string>
    <string name="config_two">配置2</string>
    <string name="position_clicked_beyond_the_map">点击位置在地图之外</string>
    <string name="fetch_navigation_info">请求导航线&#8230;</string>
    <string name="navigation_hint">在地图上单击两次选择起始位置和目的地,开始导航！</string>
    <string name="current_display_area">当前显示区域为:</string>
    <string name="center_point">中心点:</string>
    <string name="zoom_level">缩放级别:</string>
    <string name="current_position">当前位置</string>

    <string name="single_building">单栋建筑物</string>
    <string name="set_initial_visible_area">设置初始视图区域</string>
    <string name="single_click">点击事件</string>
    <string name="gesture">手势操作</string>
    <string name="marker">Marker</string>
    <string name="draw_geometry">在地图上绘制点线面</string>
    <string name="search_poi">输入关键字查找POI</string>
    <string name="nearby_search">根据给定坐标查找POI</string>
    <string name="bluetooth_wifi_locate">蓝牙和WIFI定位</string>
    <string name="wifi_locate">WIFI定位</string>
    <string name="bluetooth_locate">蓝牙定位</string>
    <string name="navigation_point">途经点导航</string>
    <string name="navigation">路径规划</string>
    <string name="transform">转化</string>
    <string name="coordinate_transform">坐标转化</string>
    <string name="custom_style">动态替换style</string>
    <string name="clock_wise">顺时针</string>
    <string name="no_clock_wise">逆时针</string>
    <string name="skew_down">俯</string>
    <string name="skew_up">仰</string>
    <string name="over_view">总览图</string>
    <string name="screen_coo">屏幕坐标:</string>
    <string name="al_la_coo">经纬度:</string>
    <string name="plan_coo">平面坐标:</string>
    <string name="permission_denied">申请读写权限被拒绝,Android6.0及以上地图渲染可能出现问题!</string>
    <string name="from">从</string>
    <string name="get_into">出发</string>
    <string name="arrive_in">到达</string>
    <string name="turn_left">左转</string>
    <string name="turn_right">右转</string>
    <string name="connect_facility">联通设施</string>
    <string name="walk_streight">直行</string>
    <string name="u_turn">调头</string>
</resources>